public/css/styles.css
html {
    height: 100%;
    scroll-behavior: smooth;
}

body {
    background: #000428;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    color: rgb(255,250,250);
    font-family: 'Montserrat', sans-serif;
    text-align: left;
    font-size: large;
    position: relative;
    min-height: 100%;
    padding-bottom: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'EB Garamond', serif;
}

h1 {
    font-size: 2.5rem;
}

.btn-outline-primary {
    color: rgb(255,250,250);
}


/* Navigation Bar Styles  */

nav {
    background-color: rgba(0, 0, 0, 0.2); 
}

.navbar-brand {
    font-family: 'Satisfy', cursive;
    font-size: 1.5rem;
}

.nav-link {
    font-size: small;
}

.nav-link:hover {
    background-color: rgba(0, 0, 0, 0.20);
}

.dropdown-menu {
    background-color: rgba(0, 0, 0, 0.10);
}

.dropdown-item:hover {
    background-color: rgba(0, 0, 0, 0.20);
}

/* Top Section */
.home-page-header {
    background-image: url("../images/rm208-jj-14_1_1.jpg");
    height: 100vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    /* margin-bottom: ; */
}

.top-content {
    padding: 6.5rem 2.5rem;
}

.top-content h1 {
    font-size: 3.5rem;
}

.top-content p {
    font-size: 1rem;
    line-height: 1.3;
    width: 50%;
}

.top-content a {
    margin-top: 1rem;
}

@media (max-width: 768px){
    .top-content {
        padding-bottom: 3.5rem;
        text-align: center;
    }

    .top-content p {
        text-align: center;
        width: 100%;
    }

}


.covid-overview {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: 1fr;
   grid-template-areas: 
    "overview overview overview overview-img overview-img"
    "overview overview overview overview-img overview-img"
   ; 
}

.overview {
    padding-right: 2rem;
}

.overview-img {
    width: 100%;
    height: 100;
    padding-top: 2rem;
}

@media (max-width: 768px){
    .covid-overview {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr auto;
        grid-template-areas: 
         "overview-img"
         "overview"
        ; 
     }

     .overview-img {
         margin-bottom: 0;
     }

     .overview {
         margin-top: 0;
     }
     
}

.card {
    padding-bottom: 0;
    background-color: rgba(0, 0, 0, 0.07);
    border-radius: 1.5rem;
}

@media (max-width: 576px){
    .card {
        height: fit-content;
    }
}

.symptoms-cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-rows: 1fr;
    grid-gap: 5px;
    margin-bottom: 2rem;
}

@media (max-width: 768px){
    .symptoms-cards {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-auto-rows: 1fr;
        grid-gap: 5px;
    }
}

@media (max-width: 576px){
    .symptoms-cards {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-auto-rows: auto;
        grid-gap: 5px;
    }
}

.display-hide {
    display: none;
}

.display-button1, .display-button2, .display-button3 {
    float: right;
    font-size: 2.5rem;
    padding: 0 1.5rem;
}

span:hover{
    background-color: rgba(0, 0, 0, 0.20);
}

/* Prevention Section  */

.list-group {
    width: 85%;
}

.list-group-item {
    background-color: rgba(0, 0, 0, 0.07);
}

@media (max-width: 576px){
    .list-group {
       width: 100%;
    }
}

/* Treatment section  */

#covid-treatment {
    width: 85%;
}

@media (max-width: 576px){
    .treatment {
        width: 100%;
    }
}

/* Statistics Page styles */
.search-form {
    margin: 3rem auto 1.5rem;
    text-align: center;
}

.form {
    margin: 0 auto;
    width: 50%;
}

.search-form button {
    margin: 1rem 0;
}

.stats-header {
    text-align: center;
    padding: 1.2rem;
}

.stats-header h1 {
    font-size: 2rem;
}

.global-stats {
    margin: 1.5rem auto;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-rows: 0.75fr;
    grid-template-areas:
    "asia n-america s-america"
    "europe africa oceania" 
    ;
    grid-gap: 10px;
}

@media (max-width: 768px){
    .global-stats {
        margin: 1.5rem auto;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-auto-rows: 1fr;
        grid-template-areas:
        "asia n-america"
        "s-america europe"
        "africa oceania" 
        ;
        grid-gap: 10px;
    }

    .form {
        width: 100%;
    }

}

@media (max-width: 576px){
    .global-stats {
        margin: 1.5rem auto;
        text-align: left;
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-auto-rows: 0.75fr;
        grid-template-areas: 
        "asia"
        "n-america"
        "s-america"
        "europe"
        "africa"
        "oceania"
        ;
        grid-gap: 10px;
    }

}

table {
    border-spacing: 10px;
    border-collapse: separate;
    width: 90%;
    margin: 0 auto;
}

th, td {
    background-color: rgba(0, 0, 0, 0.07);
    padding: 0.5rem;
}

th {
    text-align: center;
}


table p {
    font-size: small;
    line-height: 1.0;
}

table h2 {
    font-size: 1.5rem;
}

/* Country Search Results Page  */
.country-results {
    width: 75%;
    margin: 5rem auto;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-auto-rows: 0.25fr;
    grid-template-areas: 
        "country-searched country-searched country-searched country-searched country-searched"
        "cases-today deaths-today recoveries-today active-cases critical-cases"
        "total-cases total-deaths total-recoveries tests-done tests-done"
    ;
    grid-gap: 10px;
}

.top-result-div h1 {
    font-size: 2rem;
    margin-bottom: 0;
}

.top-result-div p {
    margin-top: 0;
}

.results-divs {
    padding: 1rem;
    background-color: rgba(0, 0, 0, 0.07);
}

.results-divs p {
    font-size: small;
}

.results-flag {
    float: left;
    margin-right: 2rem;
    height: 110px;
    width: 110px;
    border-radius: 50%;
}

@media (max-width: 768px){
    .country-results {
        width: 75%;
        margin: 5rem auto;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-auto-rows: 0.25fr;
        grid-template-areas: 
            "country-searched country-searched"
            "cases-today total-cases"
            "deaths-today total-deaths" 
            "recoveries-today total-recoveries"
            "active-cases tests-done"
            "critical-cases tests-done"
        ;
        grid-gap: 10px;
    }

    .results-flag {
        float: left;
        margin-right: 0.5rem;
        height: 75px;
        width: 75px;
        border-radius: 50%;
    }

    .top-result-div h1 {
        font-size: 1.5rem;
    }
}

@media (max-width: 576px){
    .top-result-div h1 {
        font-size: 1.5rem;
    }

    .results-flag {
        float: left;
        margin-right: 0.5rem;
        height: 30px;
        width: 30px;
        border-radius: 50%;
    }

    .top-result-div h1 {
        font-size: 1.2rem;
    }
}


/* Footer  */
footer {
    background-color: rgba(0, 0, 0, 0.2);
    margin-bottom: -10.55rem;
    padding: 1rem 0 0.5rem;
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 9rem;
}

footer p {
    font-size: 0.75rem;
    margin-bottom: 0;
    padding-bottom: 0;
}

